--- a/CSS/single_boligstyling.css
+++ b/CSS/single_boligstyling.css
@@ -54,6 +54,7 @@ img {vertical-align: middle;}
   margin: auto;
 }
 
+/*
 .billeder_container{
     height: 400px;
     display: grid;
@@ -65,7 +66,9 @@ img {vertical-align: middle;}
         ". . ."
 
 }
+*/
 
+/*
 .mySlides{
 
     grid-area: b;
@@ -82,6 +85,7 @@ img {vertical-align: middle;}
         grid-area: b;
 
 }
+*/
 /* Next & previous buttons */
 .prev, .next {
   cursor: pointer;
