--- a/CSS/single_eventstyling.css
+++ b/CSS/single_eventstyling.css
@@ -1,6 +1,28 @@
+
 .eventContainer{
-    background-color: #65b0ba;
+    background-color: #e8b931;
     padding-bottom: 2em;
+}
+
+@media screen and (min-width:640px){
+    .eventContainer{
+        margin-left: 4em;
+        margin-right: 4em;
+    }
+}
+
+@media screen and (min-width:1000px){
+    .eventContainer{
+        margin-left: 7em;
+        margin-right: 7em;
+    }
+}
+
+@media screen and (min-width:1200px){
+    .eventContainer{
+        margin-left: 15em;
+        margin-right: 15em;
+    }
 }
 
 .data-navn{
@@ -9,6 +31,7 @@
     text-align: center;
     padding-left: 1.5em;
     padding-right: 1.5em;
+    padding-top: 1.5em;
     font-size: 1.6em;
     color: #005860;
 }
@@ -21,10 +44,6 @@
     padding-bottom: 1.5em;
 }
 
-.data-billede{
-    width: 100%;
-}
-
 .tilbage{
     border: 1px solid white;
     font-family: 'heebo', sans-serif;
@@ -35,7 +54,7 @@
     padding-right: 1.5em;
     margin-left: 2em;
     margin-top: 1em;
-    background-color: #65b0ba;
+    background-color: #e8b931;
     color: white;
 }
 
@@ -53,14 +72,32 @@ img {vertical-align: middle;}
 /* Slideshow container */
 .slideshow-container {
   position: relative;
-  margin: auto;
+}
+
+@media screen and (min-width:640px){
+    .slideshow-container{
+        margin-left: 2em;
+        margin-right: 2em;
+    }
+}
+
+@media screen and (min-width:1000px){
+    .slideshow-container{
+        margin-left: 6em;
+        margin-right: 6em;
+    }
+}
+
+@media screen and (min-width:1200px){
+    .eventContainer{
+        margin-left: 15em;
+        margin-right: 15em;
+    }
 }
 
 /*
 .billeder_container{
-
-    height: 450px;
-    padding: 5px;
+    height: 400px;
     display: grid;
     grid-template-columns: 1fr 95% 1fr;
     grid-template-rows: 1fr 1fr 1fr;
@@ -68,21 +105,26 @@ img {vertical-align: middle;}
         ". . ."
         ". b ."
         ". . ."
+
 }
 */
 
 /*
 .mySlides{
+
     grid-area: b;
 }
 
 
 .prev{
-    grid-area: p;
+        grid-area: p;
+
 }
 
 .next{
-    grid-area: b;
+
+        grid-area: b;
+
 }
 */
 /* Next & previous buttons */
@@ -127,7 +169,7 @@ img {vertical-align: middle;}
 .numbertext {
   color: #f2f2f2;
   font-size: 12px;
-  padding: 8px 12px;
+  padding: 20px 20px;
   position: absolute;
   top: 0;
 }
@@ -170,4 +212,3 @@ img {vertical-align: middle;}
 @media only screen and (max-width: 300px) {
   .prev, .next,.text {font-size: 11px}
 }
-
