--- a/CSS/home.css
+++ b/CSS/home.css
@@ -368,46 +368,47 @@ body {
 
     INTERAKTIV SVG*/
 
-#santa {
+    @media screen and (min-width:1300px) {
 
-    background-image: url(nissew-01.svg);
-    background-size: 100% 100%;
+#santa_container {
+   position: absolute;
+    top: 1200px;
+    left: 10em;
 
-    width: 120px;
-    height: 101px;
 
-    position: absolute;
-    top: 10vw;
 }
+
+#santa_sprite{
+    background-image: url(../nisse-01.svg);
+    background-size: 800% 100%;
+
+    width: 10vw;
+    height: 12vw;
+
+
+    }
+
+
+
 
 .waving {
-    animation-duration: 5s;
-    animation-timing-function: steps(8);
-    animation-fill-mode: forwards;
-    animation-name: waving;
-}
+        animation-name: waving;
+       animation-iteration-count: 1;
+    animation-duration: 4s;
+      animation-timing-function: steps(8);
+    animation-iteration-count: infinite;
+    animation-direction: reverse;
+    background-position: -800% 0;
 
-@keyframes waving {
-    from {
-        right: -30vw;
-    }
-    to {
-        right: 80vw;
-    }
+
 
 }
 
-#tooltip  {
 
-  width: 180px;
-  padding: 4px 0;
 
-  position: absolute;
-  left: 5%;
-  top: 57%;
 
-  border-radius: 3px;
-    }
+
+
 
 .button:hover {
     cursor: pointer;
@@ -434,7 +435,8 @@ body {
   transition: opacity 0.3s;
 }
 
-/* Tooltip arrow */
+/*Tooltip arrow*/
+
 #tooltip .tooltiptext::after {
   content: "";
   position: absolute;
@@ -453,4 +455,4 @@ body {
 }
 
 
-
+}
