til toppen knappen på shoppen

--- a/CSS/webshop.css
+++ b/CSS/webshop.css
@@ -1,316 +1,345 @@
      /*   GENERALT */
 
 
-        .row {
-            display: block;
-        }
+     .row {
+         display: block;
+     }
 
-        h1 {
-            font-family: 'Heebo', sans-serif;
-            font-weight: 300;
-            color: rgba(0, 0, 0, 0.56);
-            text-decoration: none;
-            font-size: 1.3em;
+     h1 {
+         font-family: 'Heebo', sans-serif;
+         font-weight: 300;
+         color: rgba(0, 0, 0, 0.56);
+         text-decoration: none;
+         font-size: 1.3em;
 
-        }
+     }
 
-        p {
-            font-family: 'Heebo', sans-serif;
-            font-weight: 300;
-            color: rgba(0, 0, 0, 0.56);
-            text-decoration: none;
-            font-size: 0.8em;
-        }
+     p {
+         font-family: 'Heebo', sans-serif;
+         font-weight: 300;
+         color: rgba(0, 0, 0, 0.56);
+         text-decoration: none;
+         font-size: 0.8em;
+     }
 
-        hr {
-            background-color: #0B584D;
-            padding: 1px;
+     hr {
+         background-color: #0B584D;
+         padding: 1px;
 
-            position: absolute;
+         position: absolute;
 
-            margin-top: 20px;
+         margin-top: 20px;
 
 
-        }
+     }
 
-        .image {
+     .image {
 
-            width: 90%;
-            margin-top: 15px;
-            margin-left: 10px;
+         width: 90%;
+         margin-top: 15px;
+         margin-left: 10px;
 
-        }
+     }
 
 
 
      /*   MODAL*/
 
 
-        #modal {
-            width: 100vw;
-            height: 100vh;
-            position: fixed;
-            background-color: white;
-            text-align: center;
-            /** skjuler den **/
-            transition: 0.1s;
-            opacity: 0;
-            pointer-events: none;
-            z-index: 99;
+     #modal {
+         width: 100vw;
+         height: 100vh;
+         position: fixed;
+         background-color: white;
+         text-align: center;
+         /** skjuler den **/
+         transition: 0.1s;
+         opacity: 0;
+         pointer-events: none;
+         z-index: 99;
 
 
-        }
+     }
 
-        #modal_content {
-            width: 95vw;
-            height: 85vh;
-           background-color: white;
-      /*      background-color: rgba(144, 166, 129, 0.19);*/
-            margin: auto;
+     #modal_content {
+         width: 95vw;
+         height: 85vh;
+         background-color: white;
+         /*      background-color: rgba(144, 166, 129, 0.19);*/
+         margin: auto;
 
 
-        }
+     }
 
-        #modal.vis {
+     #modal.vis {
 
-            opacity: 1;
-            pointer-events: all;
-            top: 0;
+         opacity: 1;
+         pointer-events: all;
+         top: 0;
 
 
-        }
+     }
 
-        #modal.close{
-            border: none;
-        }
+     #modal.close {
+         border: none;
+     }
 
 
 
-        /*   NAVIGATION*/
+     /*   NAVIGATION*/
 
 
-        .column1 {
-            float: left;
-            margin-right: 5px;
-            font-size: 1em;
+     .column1 {
+         float: left;
+         margin-right: 5px;
+         font-size: 1em;
 
 
 
-        }
+     }
 
 
-        .row:after {
-            content: "";
-            display: table;
-            clear: both;
-        }
+     .row:after {
+         content: "";
+         display: table;
+         clear: both;
+     }
 
-        #sorteringsknapper {
-            background-color: #E6C9C7;
-            height: 700px;
-            width: 170px;
+     #sorteringsknapper {
+         background-color: #E6C9C7;
+         height: 700px;
+         width: 170px;
 
-        }
+     }
 
-        .menu_item {
+     .menu_item {
 
-            font-family: 'Heebo', sans-serif;
-            font-weight: 300;
-            color: rgba(0, 0, 0, 0.56);
-            background-color: #E6C9C7;
+         font-family: 'Heebo', sans-serif;
+         font-weight: 300;
+         color: rgba(0, 0, 0, 0.56);
+         background-color: #E6C9C7;
 
-            font-size: 1.2em;
-            border: none;
-            display: block;
-            margin-bottom: 0.4em;
+         font-size: 1.2em;
+         border: none;
+         display: block;
+         margin-bottom: 0.4em;
 
-        }
+     }
 
-        .menu_item:hover {
-            text-decoration: underline;
-        }
+     .menu_item:hover {
+         text-decoration: underline;
+     }
 
 
-        /* PRODUKTER*/
+     /* PRODUKTER*/
 
-        .vare_container {
-            font-family: 'Heebo', sans-serif;
-            display: inline-table;
+     .vare_container {
+         font-family: 'Heebo', sans-serif;
+         display: inline-table;
 
-        }
+     }
 
-        .column {
-            float: left;
-            width: 50%;
-            margin-top: -9px;
-            font-size: 1.3em;
-            margin-left: 10px;
+     .column {
+         float: left;
+         width: 50%;
+         margin-top: -9px;
+         font-size: 1.3em;
+         margin-left: 10px;
 
 
 
 
 
 
-        }
+     }
 
-        .pris {
+     .pris {
 
-            font-weight: 300;
-            color: rgba(0, 0, 0, 0.56);
-            text-decoration: none;
-            font-size: 1.2em;
-            text-align: center;
-        }
+         font-weight: 300;
+         color: rgba(0, 0, 0, 0.56);
+         text-decoration: none;
+         font-size: 1.2em;
+         text-align: center;
+     }
 
-        .kob {
-            text-decoration: none;
-        }
+     .kob {
+         text-decoration: none;
+     }
 
-        .kobet {
-            font-family: 'Heebo', sans-serif;
-            font-weight: 300;
-            font-size: 1.2em;
-            text-decoration: none;
+     .kobet {
+         font-family: 'Heebo', sans-serif;
+         font-weight: 300;
+         font-size: 1.2em;
+         text-decoration: none;
 
-            margin: 0 auto;
+         margin: 0 auto;
 
-            background-color: white;
-            color: rgba(0, 0, 0, 0.56);
-            border: 1px solid rgba(0, 0, 0, 0.56);
+         background-color: white;
+         color: rgba(0, 0, 0, 0.56);
+         border: 1px solid rgba(0, 0, 0, 0.56);
 
 
 
-            display: block;
-            margin-bottom: 0.4em;
-        }
+         display: block;
+         margin-bottom: 0.4em;
+     }
 
-        .title {
-            text-align: center;
-            font-family: 'Heebo', sans-serif;
-            font-weight: 600;
+     .title {
+         text-align: center;
+         font-family: 'Heebo', sans-serif;
+         font-weight: 600;
 
 
-            color: black;
-            text-decoration: none;
-            font-size: 0.8em;
-        }
+         color: black;
+         text-decoration: none;
+         font-size: 0.8em;
+     }
 
 
 
-         /* RESPONSIV*/
+     /* RESPONSIV*/
 
-        @media screen and (min-width:563px) {
-            .column1 {
-                margin-right: 5px;
-            }
+     @media screen and (min-width:563px) {
+         .column1 {
+             margin-right: 5px;
+         }
 
-            #sorteringsknapper {
+         #sorteringsknapper {
 
-                height: 700px;
-                width: 250px;
-                font-size: 1.3em;
+             height: 700px;
+             width: 250px;
+             font-size: 1.3em;
 
-            }
+         }
 
 
-            hr {}
+         hr {}
 
-            .column {
+         .column {
 
 
-                width: 50%;
+             width: 50%;
 
 
-            }
+         }
 
 
 
 
 
-        }
+     }
 
-        @media screen and (min-width:692px) {
-            .column1 {
-                margin-right: 25px;
-            }
+     @media screen and (min-width:692px) {
+         .column1 {
+             margin-right: 25px;
+         }
 
-            #sorteringsknapper {
+         #sorteringsknapper {
 
-                height: 700px;
-                width: 250px;
-                font-size: 1.3em;
+             height: 700px;
+             width: 250px;
+             font-size: 1.3em;
 
-            }
+         }
 
 
-            hr {}
+         hr {}
 
-            .column {
-                column-count: 1;
+         .column {
+             column-count: 1;
 
-                width: 50%;
+             width: 50%;
 
 
-            }
+         }
 
 
 
 
 
-        }
+     }
 
-        @media screen and (min-width:728px) {
+     @media screen and (min-width:728px) {
 
 
-            .column1 {
-                margin-right: 50px;
-            }
+         .column1 {
+             margin-right: 50px;
+         }
 
-            .column {
-                column-count: 2;
+         .column {
+             column-count: 2;
 
-                width: 50%;
+             width: 50%;
 
 
-            }
+         }
 
 
-            hr {}
+         hr {}
 
-            #sorteringsknapper {
+         #sorteringsknapper {
 
-                height: 700px;
-                width: 250px;
+             height: 700px;
+             width: 250px;
 
-            }
-        }
+         }
+     }
 
-        @media screen and (min-width:1000px) {
+     @media screen and (min-width:1000px) {
 
 
-            .column1 {
-                margin-right: 25px;
+         .column1 {
+             margin-right: 25px;
 
 
-            }
+         }
 
 
-            .column {
-                column-count: 2;
+         .column {
+             column-count: 2;
 
-                width: 70%;
+             width: 70%;
 
 
-            }
+         }
 
 
-            hr {}
+         hr {}
 
-            #sorteringsknapper {
+         #sorteringsknapper {
 
-                height: 700px;
-                width: 250px;
+             height: 700px;
+             width: 250px;
 
-            }
-        }
+         }
+     }
 
+     /*-----til toppen knappen-------*/
+
+     #button {
+         display: none;
+         position: fixed;
+         bottom: 20px;
+         right: 30px;
+         z-index: 99;
+         font-size: 18px;
+         border: none;
+         outline: none;
+         background-color: white;
+         color: black;
+         font-family: 'Open Sans Condensed', sans-serif;
+         cursor: pointer;
+         padding: 5px;
+     }
+
+     @media only screen and (max-width: 600px) {
+         #button {
+             bottom: 20px;
+             right: 10px;
+         }
+     }
+
+     #button:hover {
+         color: darkgrey;
+         font-size: 20px;
+     }
