--- a/CSS/home.css
+++ b/CSS/home.css
@@ -1,7 +1,7 @@
 /*slideshow*/
 
 .slideshow {
-    width: 100%;
+    max-width: 1000px;
     position: relative;
 
 }
@@ -200,6 +200,7 @@ body {
         font-family: 'Heebo', sans-serif;
         font-weight: 100;
         font-size: 1.2em;
+
     }
 
     .projektListview {
